k8s/manifest/dev/backend_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-backend
  namespace: hoge
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dev-backend
  template:
    metadata:
      labels:
        app: dev-backend
    spec:
      containers:
      - image: $ECR_REGISTRY/$ECR_FRONTEND_REPOSITORY:$GITHUB_SHA
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 500m
            memory: 500Mi
        imagePullPolicy: Always
        name: dev-backend
        ports:
        - containerPort: 9001
        volumeMounts:
        - name: persistent-storage
          mountPath: /data
      volumes:
      - name: persistent-storage
        persistentVolumeClaim:
          claimName: ebs-claim
