k8s/manifest/dev/frontend_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-frontend
  namespace: hoge
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dev-frontend
  template:
    metadata:
      labels:
        app: dev-frontend
    spec:
      containers:
      - image: $ECR_REGISTRY/$ECR_FRONTEND_REPOSITORY:$GITHUB_SHA
        resources:
          limits:
            cpu: 500m
            memory: 4Gi
          requests:
            cpu: 500m
            memory: 4Gi
        imagePullPolicy: Always
        name: dev-frontend
        ports:
        - containerPort: 3000
