k8s/manifest/dev/frontend_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-frontend-ingress
  namespace: hoge
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-1:XXXXXXXXXXX:certificate/UUID
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
spec:
  rules:
    - host: www.hoge-dev.domain.jp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hoge-dev-frontend-service
                port:
                  name: http
